--- a/genindex.html
+++ b/genindex.html
@@ -486,9 +486,169 @@
 </li>
         <li><a href="cpp_api/apybuffer.html#_CPPv4N9APyBuffer11vector_typeE">APyBuffer::vector_type (C++ type)</a>
 </li>
-        <li><a href="api/apycfixed.html#apytypes.APyCFixed">APyCFixed (class in apytypes)</a>
+        <li><a href="cpp_api/apycfixed.html#_CPPv49APyCFixed">APyCFixed (C++ class)</a>
+
+        <ul>
+          <li><a href="api/apycfixed.html#apytypes.APyCFixed">(class in apytypes)</a>
 </li>
-        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray">APyCFixedArray (class in apytypes)</a>
+        </ul></li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4I0EN9APyCFixed9APyCFixedEii3_IT3_IT">APyCFixed::APyCFixed (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedERK9APyCFixed">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedERKN2nb5tupleENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[4]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedEii">[5]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedEiiNSt16initializer_listI10apy_limb_tEE">[6]</a>, <a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed9APyCFixedEv">[7]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed25bit_pattern_to_string_decEv">APyCFixed::bit_pattern_to_string_dec (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4bitsEv">APyCFixed::bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed5c_oneEii">APyCFixed::c_one (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4castENSt8optionalIiEENSt8optionalIiEENSt8optionalI16QuantizationModeEENSt8optionalI12OverflowModeEENSt8optionalIiEE">APyCFixed::cast (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4I0EN9APyCFixed11copy_n_fromEv22RANDOM_ACCESS_ITERATORNSt6size_tE">APyCFixed::copy_n_from (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4I0ENK9APyCFixed9copy_n_toEv22RANDOM_ACCESS_ITERATORNSt6size_tE">APyCFixed::copy_n_to (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed9frac_bitsEv">APyCFixed::frac_bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed13from_apyfixedERK8APyFixedNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixed::from_apyfixed (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed12from_complexENSt7complexIdEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixed::from_complex (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed11from_doubleEdNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixed::from_double (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed12from_integerERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixed::from_integer (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed11from_numberERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixed::from_number (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed8get_imagEv">APyCFixed::get_imag (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed8get_realEv">APyCFixed::get_real (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed8int_bitsEv">APyCFixed::int_bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed12is_identicalERK9APyCFixed">APyCFixed::is_identical (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed7is_zeroEv">APyCFixed::is_zero (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK8APyFixed">APyCFixed::operator!= (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKN2nb4int_E">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKNSt7complexIdEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneEd">[4]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmlERK9APyCFixed">APyCFixed::operator* (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmlERKN2nb4int_E">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERK9APyCFixed">APyCFixed::operator+ (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERKN2nb4int_E">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiERK9APyCFixed">APyCFixed::operator- (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiERKN2nb4int_E">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiEv">[2]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixeddvERK9APyCFixed">APyCFixed::operator/ (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixeddvERKN2nb4int_E">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedlsEKi">APyCFixed::operator&lt;&lt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixedlSEKi">APyCFixed::operator&lt;&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedeqERK8APyFixed">APyCFixed::operator== (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedeqERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedeqERKN2nb4int_E">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedeqERKNSt7complexIdEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedeqEd">[4]</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedrsEKi">APyCFixed::operator&gt;&gt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixedrSEKi">APyCFixed::operator&gt;&gt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed11python_copyEv">APyCFixed::python_copy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed15python_deepcopyERN2nb4dictE">APyCFixed::python_deepcopy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4reprEv">APyCFixed::repr (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed12same_type_asERK9APyCFixed">APyCFixed::same_type_as (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed7to_bitsEv">APyCFixed::to_bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed10to_complexEv">APyCFixed::to_complex (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed9to_stringEi">APyCFixed::to_string (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13to_string_decEv">APyCFixed::to_string_dec (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13to_string_hexEv">APyCFixed::to_string_hex (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13to_string_octEv">APyCFixed::to_string_oct (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv414APyCFixedArray">APyCFixedArray (C++ class)</a>
+
+        <ul>
+          <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray">(class in apytypes)</a>
+</li>
+        </ul></li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::APyCFixedArray (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayEv">[4]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray6arangeERKN2nb6objectERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::arange (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray10ARRAY_NAMEE">APyCFixedArray::ARRAY_NAME (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4bitsEv">APyCFixedArray::bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4castENSt8optionalIiEENSt8optionalIiEENSt8optionalI16QuantizationModeEENSt8optionalI12OverflowModeEENSt8optionalIiEE">APyCFixedArray::cast (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12create_arrayERKNSt6vectorINSt6size_tEEE">APyCFixedArray::create_array (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray19create_array_staticERKNSt6vectorINSt6size_tEEERK9APyCFixed">APyCFixedArray::create_array_static (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray13create_scalarEv">APyCFixedArray::create_scalar (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray7cumprodENSt8optionalIN2nb4int_EEE">APyCFixedArray::cumprod (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray6cumsumENSt8optionalIN2nb4int_EEE">APyCFixedArray::cumsum (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::eye (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray9frac_bitsEv">APyCFixedArray::frac_bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_array (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_complexERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_complex (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_numbersERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_numbers (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8get_imagEv">APyCFixedArray::get_imag (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8get_realEv">APyCFixedArray::get_real (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::identity (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8int_bitsEv">APyCFixedArray::int_bits (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray4onesERKN2nb5tupleENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::ones (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK14APyCFixedArray">APyCFixedArray::operator* (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK9APyCFixed">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK14APyCFixedArray">APyCFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK9APyCFixed">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiERK14APyCFixedArray">APyCFixedArray::operator- (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiEv">[2]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraydvERK14APyCFixedArray">APyCFixedArray::operator/ (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraydvERK9APyCFixed">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraylsEKi">APyCFixedArray::operator&lt;&lt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArraylSEKi">APyCFixedArray::operator&lt;&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayrsEKi">APyCFixedArray::operator&gt;&gt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArrayrSEKi">APyCFixedArray::operator&gt;&gt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4prodENSt8optionalINSt7variantIN2nb5tupleEN2nb4int_EEEEE">APyCFixedArray::prod (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray11python_copyEv">APyCFixedArray::python_copy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray15python_deepcopyERKN2nb4dictE">APyCFixedArray::python_deepcopy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4rdivERK9APyCFixed">APyCFixedArray::rdiv (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4reprEv">APyCFixedArray::repr (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4rsubERK9APyCFixed">APyCFixedArray::rsub (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12same_type_asERK14APyCFixedArray">APyCFixedArray::same_type_as (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12same_type_asERK9APyCFixed">[1]</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray3sumENSt8optionalINSt7variantIN2nb5tupleEN2nb4int_EEEEE">APyCFixedArray::sum (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8to_numpyEv">APyCFixedArray::to_numpy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray5zerosERKN2nb5tupleENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::zeros (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_mp.html#_CPPv413APyDivInverse">APyDivInverse (C++ class)</a>
 </li>
@@ -696,6 +856,8 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb8sequenceENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
@@ -776,8 +938,6 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N18APyFixedCastOption12quantizationE">APyFixedCastOption::quantization (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat.html#_CPPv48APyFloat">APyFloat (C++ class)</a>
 
         <ul>
@@ -1264,11 +1424,13 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv421check_mantissa_formati">check_mantissa_format (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0000E28complex_fixed_point_divisionv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN226RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tENSt6size_tENSt6size_tE28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT">complex_fixed_point_division (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0000E27complex_fixed_point_productv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN226RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tE28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT">complex_fixed_point_product (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv428complex_multiplication_1_1_2P10apy_limb_tPK10apy_limb_tPK10apy_limb_t">complex_multiplication_1_1_2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv414ContextManager">ContextManager (C++ class)</a>
 </li>
