--- a/genindex.html
+++ b/genindex.html
@@ -532,7 +532,7 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmlERK9APyCFixed">APyCFixed::operator* (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmlERKN2nb4int_E">[1]</a>
 </li>
-        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERK9APyCFixed">APyCFixed::operator+ (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERKN2nb4int_E">[1]</a>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERK9APyCFixed">APyCFixed::operator+ (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplERKN2nb4int_E">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedplEv">[2]</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiERK9APyCFixed">APyCFixed::operator- (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiERKN2nb4int_E">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedmiEv">[2]</a>
 </li>
@@ -616,7 +616,7 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK14APyCFixedArray">APyCFixedArray::operator* (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK9APyCFixed">[1]</a>
 </li>
-        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK14APyCFixedArray">APyCFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK9APyCFixed">[1]</a>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK14APyCFixedArray">APyCFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplEv">[2]</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiERK14APyCFixedArray">APyCFixedArray::operator- (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymiEv">[2]</a>
 </li>
@@ -738,7 +738,7 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedmlERK8APyFixed">APyFixed::operator* (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedmlERKN2nb4int_E">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedplERK8APyFixed">APyFixed::operator+ (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedplERKN2nb4int_E">[1]</a>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedplERK8APyFixed">APyFixed::operator+ (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedplERKN2nb4int_E">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedplEv">[2]</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedmiERK8APyFixed">APyFixed::operator- (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedmiERKN2nb4int_E">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedmiEv">[2]</a>
 </li>
@@ -876,7 +876,7 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymlERK13APyFixedArray">APyFixedArray::operator* (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymlERK8APyFixed">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayplERK13APyFixedArray">APyFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayplERK8APyFixed">[1]</a>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayplERK13APyFixedArray">APyFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayplERK8APyFixed">[1]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayplEv">[2]</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymiERK13APyFixedArray">APyFixedArray::operator- (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymiERK8APyFixed">[1]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymiEv">[2]</a>
 </li>
@@ -1058,7 +1058,7 @@
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloatmlERK8APyFloat">APyFloat::operator* (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloatplERK8APyFloat">APyFloat::operator+ (C++ function)</a>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloatplERK8APyFloat">APyFloat::operator+ (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloatplEv">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloatpLERK8APyFloat">APyFloat::operator+= (C++ function)</a>
 </li>
@@ -1250,7 +1250,7 @@
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymlERK13APyFloatArray">APyFloatArray::operator* (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymlERK8APyFloat">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK13APyFloatArray">APyFloatArray::operator+ (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK8APyFloat">[1]</a>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK13APyFloatArray">APyFloatArray::operator+ (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK8APyFloat">[1]</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplEv">[2]</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK13APyFloatArray">APyFloatArray::operator- (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK8APyFloat">[1]</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiEv">[2]</a>
 </li>
