deploy: 91bf60af86a32600c4bf260dd2054ad7d973f58e

--- a/genindex.html
+++ b/genindex.html
@@ -548,6 +548,8 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixedrSEKi">APyCFixed::operator&gt;&gt;= (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedcoEv">APyCFixed::operator~ (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed11python_copyEv">APyCFixed::python_copy (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed15python_deepcopyERN2nb4dictE">APyCFixed::python_deepcopy (C++ function)</a>
@@ -629,6 +631,8 @@
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayrsEKi">APyCFixedArray::operator&gt;&gt; (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArrayrSEKi">APyCFixedArray::operator&gt;&gt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraycoEv">APyCFixedArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4prodENSt8optionalINSt7variantIN2nb5tupleEN2nb4int_EEEEE">APyCFixedArray::prod (C++ function)</a>
 </li>
@@ -762,6 +766,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixedrSEKi">APyFixed::operator&gt;&gt;= (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixedcoEv">APyFixed::operator~ (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed32positive_greater_than_equal_pow2Ei">APyFixed::positive_greater_than_equal_pow2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed4pownEi">APyFixed::pown (C++ function)</a>
@@ -889,6 +895,8 @@
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayrsEKi">APyFixedArray::operator&gt;&gt; (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArrayrSEKi">APyFixedArray::operator&gt;&gt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraycoEv">APyFixedArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray4prodENSt8optionalINSt7variantIN2nb5tupleEN2nb4int_EEEEE">APyFixedArray::prod (C++ function)</a>
 </li>
@@ -1255,6 +1263,8 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK13APyFloatArray">APyFloatArray::operator- (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK8APyFloat">[1]</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiEv">[2]</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraydvERK13APyFloatArray">APyFloatArray::operator/ (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraydvERK8APyFloat">[1]</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraycoEv">APyFloatArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray4prodENSt8optionalINSt7variantIN2nb5tupleEN2nb4int_EEEEE">APyFloatArray::prod (C++ function)</a>
 </li>
