--- a/changelog.html
+++ b/changelog.html
@@ -332,7 +332,8 @@ for the Python <code class="docutils literal notranslate"><span class="pre">copy
 <li><p>Integer powers of <code class="docutils literal notranslate"><span class="pre">APyFixed</span></code>.</p></li>
 <li><p>Fixed-point multiplication, including matrix multiplication, is faster for
 single limb arguments resulting in a two-limb result.</p></li>
-<li><p>Support for unary +, <code class="docutils literal notranslate"><span class="pre">__pos__</span></code>.</p></li>
+<li><p>Support for unary plus: <code class="docutils literal notranslate"><span class="pre">+X</span></code>, <code class="docutils literal notranslate"><span class="pre">__pos__</span></code>.</p></li>
+<li><p>Support for logic not: <code class="docutils literal notranslate"><span class="pre">~X</span></code>, <code class="docutils literal notranslate"><span class="pre">__invert__</span></code>.</p></li>
 </ul>
 </section>
 <section id="fixed">
