deploy: 45837f2f56c9c0123f162dc0b99e628c84093abf

--- a/genindex.html
+++ b/genindex.html
@@ -2389,10 +2389,10 @@
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_absEN9APyBufferI10apy_limb_tE11vector_type8iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_abs (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_addEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_add (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd16vector_add_constEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE10apy_limb_tN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_add_const (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_mulEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul (C++ function)</a>
@@ -2402,6 +2402,8 @@
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd26vector_multiply_accumulateEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_multiply_accumulate (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_negEN9APyBufferI10apy_limb_tE11vector_type8iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_neg (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_notEN9APyBufferI10apy_limb_tE11vector_type8iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_not (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd24vector_rdiv_const_signedEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE10apy_limb_tN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_rdiv_const_signed (C++ function)</a>
 </li>
