deploy: 41d01937374c4cf9307fb66ee5574eed4a4c97d0

--- a/genindex.html
+++ b/genindex.html
@@ -499,8 +499,6 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4bitsEv">APyCFixed::bits (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed5c_oneEii">APyCFixed::c_one (C++ function)</a>
-</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4castENSt8optionalIiEENSt8optionalIiEENSt8optionalI16QuantizationModeEENSt8optionalI12OverflowModeEENSt8optionalIiEE">APyCFixed::cast (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4I0EN9APyCFixed11copy_n_fromEv22RANDOM_ACCESS_ITERATORNSt6size_tE">APyCFixed::copy_n_from (C++ function)</a>
@@ -528,6 +526,8 @@
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed12is_identicalERK9APyCFixed">APyCFixed::is_identical (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed7is_zeroEv">APyCFixed::is_zero (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed3oneEii">APyCFixed::one (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK8APyFixed">APyCFixed::operator!= (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKN2nb4int_E">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKNSt7complexIdEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneEd">[4]</a>
 </li>
