--- a/examples/test_fp8_mul.html
+++ b/examples/test_fp8_mul.html
@@ -313,7 +313,7 @@ Below is an exhaustive test of an eight-bit floating-point multiplier with round
 <span class="kn">from</span><span class="w"> </span><span class="nn">cocotb.clock</span><span class="w"> </span><span class="kn">import</span> <a href="https://docs.cocotb.org/en/stable/library_reference.html#cocotb.clock.Clock" title="cocotb.clock.Clock" class="sphx-glr-backref-module-cocotb-clock sphx-glr-backref-type-py-class"><span class="n">Clock</span></a>
 <span class="kn">from</span><span class="w"> </span><span class="nn">cocotb.runner</span><span class="w"> </span><span class="kn">import</span> <a href="https://docs.cocotb.org/en/stable/library_reference.html#cocotb.runner.get_runner" title="cocotb.runner.get_runner" class="sphx-glr-backref-module-cocotb-runner sphx-glr-backref-type-py-function"><span class="n">get_runner</span></a>
 <span class="kn">from</span><span class="w"> </span><span class="nn">cocotb.triggers</span><span class="w"> </span><span class="kn">import</span> <a href="https://docs.cocotb.org/en/stable/triggers.html#cocotb.triggers.FallingEdge" title="cocotb.triggers.FallingEdge" class="sphx-glr-backref-module-cocotb-triggers sphx-glr-backref-type-py-class"><span class="n">FallingEdge</span></a>
-<span class="kn">from</span><span class="w"> </span><span class="nn">apytypes</span><span class="w"> </span><span class="kn">import</span> <span class="n">APyFloat</span><span class="p">,</span> <span class="n">APyFloatArray</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">apytypes</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">apy</span>
 
 
 <span class="nd">@cocotb</span><span class="o">.</span><span class="n">test</span><span class="p">()</span>
@@ -322,7 +322,7 @@ Below is an exhaustive test of an eight-bit floating-point multiplier with round
 <span class="sd">    Exhaustive test of all inputs.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">EXP_BITS</span><span class="p">,</span> <span class="n">MAN_BITS</span> <span class="o">=</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">3</span>
-    <span class="n">fp8_values</span> <span class="o">=</span> <span class="n">APyFloatArray</span><span class="o">.</span><span class="n">from_bits</span><span class="p">(</span>
+    <span class="n">fp8_values</span> <span class="o">=</span> <a href="../api/utils.html#apytypes.fp" title="apytypes.fp" class="sphx-glr-backref-module-apytypes sphx-glr-backref-type-py-function"><span class="n">apy</span><span class="o">.</span><span class="n">fp</span></a><span class="p">(</span>
         <span class="nb">range</span><span class="p">(</span><span class="mi">2</span> <span class="o">**</span> <span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="n">EXP_BITS</span> <span class="o">+</span> <span class="n">MAN_BITS</span><span class="p">)),</span> <span class="n">exp_bits</span><span class="o">=</span><span class="n">EXP_BITS</span><span class="p">,</span> <span class="n">man_bits</span><span class="o">=</span><span class="n">MAN_BITS</span>
     <span class="p">)</span>
 
@@ -337,7 +337,7 @@ Below is an exhaustive test of an eight-bit floating-point multiplier with round
             <span class="k">await</span> <a href="https://docs.cocotb.org/en/stable/triggers.html#cocotb.triggers.FallingEdge" title="cocotb.triggers.FallingEdge" class="sphx-glr-backref-module-cocotb-triggers sphx-glr-backref-type-py-class"><span class="n">FallingEdge</span></a><span class="p">(</span><span class="n">dut</span><span class="o">.</span><span class="n">clk</span><span class="p">)</span>  <span class="c1"># Input is set on falling clock edge</span>
             <span class="k">await</span> <a href="https://docs.cocotb.org/en/stable/triggers.html#cocotb.triggers.FallingEdge" title="cocotb.triggers.FallingEdge" class="sphx-glr-backref-module-cocotb-triggers sphx-glr-backref-type-py-class"><span class="n">FallingEdge</span></a><span class="p">(</span><span class="n">dut</span><span class="o">.</span><span class="n">clk</span><span class="p">)</span>  <span class="c1"># Wait another clock cycle for the result</span>
 
-            <span class="n">z_dut</span> <span class="o">=</span> <a href="../api/apyfloat.html#apytypes.APyFloat.from_bits" title="apytypes.APyFloat.from_bits" class="sphx-glr-backref-module-apytypes-APyFloat sphx-glr-backref-type-py-method"><span class="n">APyFloat</span><span class="o">.</span><span class="n">from_bits</span></a><span class="p">(</span>
+            <span class="n">z_dut</span> <span class="o">=</span> <a href="../api/apyfloat.html#apytypes.APyFloat.from_bits" title="apytypes.APyFloat.from_bits" class="sphx-glr-backref-module-apytypes-APyFloat sphx-glr-backref-type-py-method"><span class="n">apy</span><span class="o">.</span><span class="n">APyFloat</span><span class="o">.</span><span class="n">from_bits</span></a><span class="p">(</span>
                 <span class="nb">int</span><span class="p">(</span><span class="n">dut</span><span class="o">.</span><span class="n">z_out</span><span class="o">.</span><span class="n">value</span><span class="p">),</span> <span class="n">exp_bits</span><span class="o">=</span><span class="n">EXP_BITS</span><span class="p">,</span> <span class="n">man_bits</span><span class="o">=</span><span class="n">MAN_BITS</span>
             <span class="p">)</span>
 
@@ -419,7 +419,7 @@ INFO: Results file: /home/runner/work/apytypes/apytypes/examples/sim_build/resul
 <span class="k">end</span><span class="w"> </span><span class="nc">arch</span><span class="p">;</span>
 </pre></div>
 </div>
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 15.887 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 15.978 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-test-fp8-mul-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../_downloads/95cd391970f13461ba86e0fd415cb9b3/test_fp8_mul.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">test_fp8_mul.ipynb</span></code></a></p>
