deploy: 777572875e6c62f4abe7e7125e1d948a0520f4bd

--- a/genindex.html
+++ b/genindex.html
@@ -21,18 +21,24 @@
   body {
     --color-code-background: #f8f8f8;
   --color-code-foreground: black;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
   }
   @media not print {
     body[data-theme="dark"] {
       --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
     }
     @media (prefers-color-scheme: dark) {
       body:not([data-theme="light"]) {
         --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
       }
     }
