--- a/examples/numpy_integration.html
+++ b/examples/numpy_integration.html
@@ -23,18 +23,24 @@
   body {
     --color-code-background: #f8f8f8;
   --color-code-foreground: black;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
   }
   @media not print {
     body[data-theme="dark"] {
       --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
     }
     @media (prefers-color-scheme: dark) {
       body:not([data-theme="light"]) {
         --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
       }
     }
@@ -341,7 +347,7 @@ to download the full example code.</p>
 <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.figure.Figure.show.html#matplotlib.figure.Figure.show" title="matplotlib.figure.Figure.show" class="sphx-glr-backref-module-matplotlib-figure sphx-glr-backref-type-py-method"><span class="n">fig</span><span class="o">.</span><span class="n">show</span></a><span class="p">()</span>
 </pre></div>
 </div>
-<img src="../_images/sphx_glr_numpy_integration_001.png" srcset="../_images/sphx_glr_numpy_integration_001.png" alt="Original pulse, Filter impulse response, Filtered signal" class = "sphx-glr-single-img"/><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.661 seconds)</p>
+<img src="../_images/sphx_glr_numpy_integration_001.png" srcset="../_images/sphx_glr_numpy_integration_001.png" alt="Original pulse, Filter impulse response, Filtered signal" class = "sphx-glr-single-img"/><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.588 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-numpy-integration-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../_downloads/6c8a751a95e4cbae2803e2f5a14ede13/numpy_integration.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">numpy_integration.ipynb</span></code></a></p>
