--- a/examples/reciprocal_lookup.html
+++ b/examples/reciprocal_lookup.html
@@ -23,18 +23,24 @@
   body {
     --color-code-background: #f8f8f8;
   --color-code-foreground: black;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
   }
   @media not print {
     body[data-theme="dark"] {
       --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
     }
     @media (prefers-color-scheme: dark) {
       body:not([data-theme="light"]) {
         --color-code-background: #202020;
   --color-code-foreground: #d0d0d0;
+  --color-brand-primary: #01889F;
+  --color-brand-content: #01889F;
   
       }
     }
@@ -450,7 +456,7 @@ single-precision floating-point representation.</p>
 <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.show.html#matplotlib.pyplot.show" title="matplotlib.pyplot.show" class="sphx-glr-backref-module-matplotlib-pyplot sphx-glr-backref-type-py-function"><span class="n">plt</span><span class="o">.</span><span class="n">show</span></a><span class="p">()</span>
 </pre></div>
 </div>
-<img src="../_images/sphx_glr_reciprocal_lookup_002.png" srcset="../_images/sphx_glr_reciprocal_lookup_002.png" alt="Approximation errors" class = "sphx-glr-single-img"/><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.310 seconds)</p>
+<img src="../_images/sphx_glr_reciprocal_lookup_002.png" srcset="../_images/sphx_glr_reciprocal_lookup_002.png" alt="Approximation errors" class = "sphx-glr-single-img"/><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.313 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-reciprocal-lookup-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">reciprocal_lookup.ipynb</span></code></a></p>
