--- a/genindex.html
+++ b/genindex.html
@@ -23,6 +23,7 @@
   --color-code-foreground: black;
   --color-brand-primary: #01889F;
   --color-brand-content: #01889F;
+  --color-brand-visited: #7ebd01;
   
   }
   @media not print {
@@ -31,6 +32,7 @@
   --color-code-foreground: #d0d0d0;
   --color-brand-primary: #01889F;
   --color-brand-content: #01889F;
+  --color-brand-visited: #7ebd01;
   
     }
     @media (prefers-color-scheme: dark) {
@@ -39,6 +41,7 @@
   --color-code-foreground: #d0d0d0;
   --color-brand-primary: #01889F;
   --color-brand-content: #01889F;
+  --color-brand-visited: #7ebd01;
   
       }
     }
@@ -1446,10 +1449,10 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0000E28complex_fixed_point_divisionv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN226RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tENSt6size_tENSt6size_tE28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT">complex_fixed_point_division (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0000E27complex_fixed_point_productv26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN226RANDOM_ACCESS_ITERATOR_OUTNSt6size_tENSt6size_tENSt6size_tE28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUT">complex_fixed_point_product (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv428complex_multiplication_1_1_2P10apy_limb_tPK10apy_limb_tPK10apy_limb_t">complex_multiplication_1_1_2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv414ContextManager">ContextManager (C++ class)</a>
@@ -1466,6 +1469,14 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.convolve">(apytypes.APyFloatArray method)</a>
 </li>
           <li><a href="api/arrayfunctions.html#apytypes.convolve">(in module apytypes)</a>
+</li>
+        </ul></li>
+        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.copy">copy() (apytypes.APyCFixedArray method)</a>
+
+        <ul>
+          <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.copy">(apytypes.APyFixedArray method)</a>
+</li>
+          <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.copy">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E19count_trailing_bitsNSt6size_tE8INT_TYPE">count_trailing_bits (C++ function)</a>
@@ -1654,10 +1665,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N21FloatInnerProdFunctor10NORM_CONSTE">FloatInnerProdFunctor::NORM_CONST (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N21FloatInnerProdFunctor10ONE_BEFOREE">FloatInnerProdFunctor::ONE_BEFORE (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK21FloatInnerProdFunctorclE26RANDOM_ACCESS_ITERATOR_IN126RANDOM_ACCESS_ITERATOR_IN228RANDOM_ACCESS_ITERATOR_INOUTNSt6size_tENSt6size_tENSt6size_tE">FloatInnerProdFunctor::operator() (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N21FloatInnerProdFunctor6RES_LOE">FloatInnerProdFunctor::RES_LO (C++ member)</a>
@@ -1711,7 +1722,11 @@
 </li>
         </ul></li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.from_bits">from_bits() (apytypes.APyFloat method)</a>
+
+        <ul>
+          <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.from_bits">(apytypes.APyFloatArray method)</a>
 </li>
+        </ul></li>
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.from_complex">from_complex() (apytypes.APyCFixed method)</a>
 
         <ul>
